# persistent-stm

./: .travis.yml  CHANGELOG.md  Correctness.md  LICENSE  README.md  persistent-stm.cabal
.github/workflows/: ci.yml
src/: PersistentSTM.hs
src/PersistentSTM/: DB.hs
test/: Main.hs
